cicd: BE CICD 내용 수정

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
     steps:
       - name: Remove previous version BACK jar
         working-directory: backend/prod/
-        # run: rm -f *.jar
+        run: rm -f *.jar
 
       - name: Download BACK jar file from artifact
         uses: actions/download-artifact@v4
