cicd: BE CICD gradle wrapper 문제 개선

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,10 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
+      
+      - name: Gradle Wrapper
+        run: gradle wrapper
+      
       - name: Build with Gradle
         run: ./gradlew bootJar
 
