--- a/.github/workflows/backendcicd.yml
+++ b/.github/workflows/backendcicd.yml
@@ -65,4 +65,4 @@ jobs:
       - name: Deploy BACK to production server
         working-directory: backend/prod/
         run: |
-          nohup ./start.sh & disown
+          screen -dmS spring_server ./start.sh
