--- a/.github/workflows/frontendcicd.yml
+++ b/.github/workflows/frontendcicd.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: frontend
 
     steps:
     - name: Checkout code
