--- a/.github/workflows/frontendcicd.yml
+++ b/.github/workflows/frontendcicd.yml
@@ -1,10 +1,11 @@
 name: Deploy React App to CloudFront
 
 on:
-  push:
-    branches:
-      - main  # main 브랜치에 푸시할 때 실행됩니다.
-
+  workflow_dispatch:
+  
+permissions:
+  contents: read
+  
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -13,37 +14,50 @@ jobs:
         working-directory: frontend
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '16'
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '16'
 
-    - name: Install dependencies
-      run: npm install
+      - name: Install dependencies
+        run: npm install
 
-    - name: Setup environment variables
-      run: |
-        echo "REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }}" >> .env
+      - name: Setup environment variables
+        run: |
+          echo "REACT_APP_API_BASE_URL=${{ secrets.REACT_APP_API_BASE_URL }}" >> .env
 
-    - name: Build React app
-      run: npm run build
-      env:
-        CI: ""
+      - name: Build React app
+        run: npm run build
+        env:
+          CI: ""
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-northeast-2  # 필요한 AWS 리전으로 변경
+      - name: Upload frontend build file to artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: FrontendApplication
+          path: frontend/dist
 
-    - name: Sync S3 bucket
-      run: |
-        aws s3 sync build/ ${{ secrets.AWS_S3_NAME }} --delete
-
-    - name: Invalidate CloudFront cache
-      run: |
-        aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/*"
+  deploy:
+    needs: build-and-deploy
+    runs-on: self-hosted
+    env:
+      CLOUD_FRONT_DISTRIBUTION_ID: ${{ secrets.AWS_DISTRIBUTION_ID}}
+    steps:
+      # - name: Remove previous version app
+      #   working-directory: frontend/
+      #   run: rm -rf dist
+  
+      - name: Download build file from artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: FrontendApplication
+          path: frontend/dist
+  
+      - name: Deploy DEV frontend
+        working-directory: frontend/dist
+        run: |
+          aws s3 sync /build s3://${{ secrets.AWS_S3_NAME }} --delete
+          aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --paths "/*"
