ci/cd: 프론트엔드 배포 환경변수 수정

--- a/.github/workflows/frontendcicd.yml
+++ b/.github/workflows/frontendcicd.yml
@@ -60,5 +60,5 @@ jobs:
       - name: Deploy DEV frontend
         working-directory: frontend/
         run: |
-          aws s3 sync build/ s3://S3_NAME --delete
-          aws cloudfront create-invalidation --distribution-id CLOUD_FRONT_DISTRIBUTION_ID --paths "/*"
+          aws s3 sync build/ s3://"$S3_NAME" --delete
+          aws cloudfront create-invalidation --distribution-id "$CLOUD_FRONT_DISTRIBUTION_ID" --paths "/*"
